--- a/locale/es/LC_MESSAGES/introduction.po
+++ b/locale/es/LC_MESSAGES/introduction.po
@@ -1,12 +1,13 @@
 # Translators:
 # Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016
+# Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Semi-Automatic Classification Plugin 5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-18 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016\n"
+"Last-Translator: Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/semi-automatic-classification/teams/53374/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -57,11 +58,11 @@ msgstr ""
 "El **objetivo principal** de :guilabel:`SCP` es proporcionar un conjunto de "
 "herramientas interrelacionadas para el procesamiento ráster con el fin de "
 "hacer un flujo de trabajo automático y facilitar la clasificación de la "
-"cobertura terrestre, lo cual puede realizarse incluso por personas cuya área"
+"cobertura del suelo, lo cual puede realizarse incluso por personas cuya área"
 " principal no es la teledetección. La primer versión de :guilabel:`SCP` fue "
 "escrita por Luca Congedo en el 2012 para el `ACC Dar Project "
 "<http://www.planning4adaptation.eu>`_ con el fin de crear una herramienta "
-"para la clasificación de la cobertura terrestre de modo automático y "
+"para la clasificación de la cobertura  del suelo de modo automático y "
 "económico (lea este `documento de trabajo "
 "<http://www.planning4adaptation.eu/Docs/events/WorkShopII/WorkingPaper_Activity2_1_complete.pdf>`_)."
 " Las siguientes versiones de :guilabel:`SCP` fueron desarrolladas como un "
