--- a/locale/es/LC_MESSAGES/faq.po
+++ b/locale/es/LC_MESSAGES/faq.po
@@ -1,12 +1,13 @@
 # Translators:
 # Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016
+# Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Semi-Automatic Classification Plugin 5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-18 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016\n"
+"Last-Translator: Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/semi-automatic-classification/teams/53374/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgid ""
 " `Google+ Community "
 "<https://plus.google.com/communities/107833394986612468374>`_ ."
 msgstr ""
-"Si tienes preguntas o comentarios por favor únete al `Grupo de Facebook "
+"Si tienes preguntas o comentarios, por favor únete al `Grupo de Facebook "
 "<https://www.facebook.com/groups/SemiAutomaticClassificationPlugin>`_ o a la"
 " `Comunidad Google+ "
 "<https://plus.google.com/communities/107833394986612468374>`_ ."
@@ -466,7 +467,7 @@ msgid ""
 msgstr ""
 "Sí, es posible si todas las imágenes tienen el mismo número de bandas. Sin "
 "embargo, si las imágenes son adquiridas en diferentes meses, los cambios en "
-"la cobertura terrestre (especialmente el estado de la vegetación) afectarán "
+"la cobertura del suelo (especialmente el estado de la vegetación) afectarán "
 "la firma espectral (Ej. el mismo pixel tiene diferente firma espectral en "
 "diferentes períodos). Los efectos atmosféricos pueden afectar las imágenes "
 "de modo diferente. Eso puede reducir la precisión en la clasificación. Por "
@@ -494,7 +495,7 @@ msgid ""
 msgstr ""
 "Sí, puedes usarlo si tienen por lo menos 4 bandas. Con menos de 4 bandas, "
 "los algoritmos semi-automatic classification son incapaces de clasificar la "
-"cobertura terrestre correctamente. Existen métodos alternativos de "
+"cobertura  del suelo correctamente. Existen métodos alternativos de "
 "clasificación, como las clasificaciones orientadas a objetos que no están "
 "implementadas en SCP."
 
@@ -962,7 +963,7 @@ msgid ""
 "please read :ref:`remote_sensing`) that define the land cover classes to be "
 "identified in the image."
 msgstr ""
-":guilabel:`SCP` posibilita la **clasificación de la cobertura terrestre** en"
+":guilabel:`SCP` posibilita la **clasificación de la cobertura del suelo** en"
 " imágenes de sensores remotos mediante "
 ":ref:`supervised_classification_definition`. Puedes producir un ráster de "
 "cobertura terrestre usando uno de los "
@@ -977,7 +978,7 @@ msgid ""
 "classification`"
 msgstr ""
 ":guilabel:`Imagen multiespectral procesada para producir una clasificación "
-"de la cobertura terrestre`"
+"de la cobertura del suelo`"
 
 #: ../../faq.rst:400
 msgid "``(Landsat image provided by USGS)``"
@@ -1197,7 +1198,7 @@ msgstr ""
 "`Coreano: QGIS Semi-Automatic Classification Plugin "
 "<http://blog.daum.net/geoscience/715>`_;"
 
-#: ../../faq.rst:459
+#: ../../faq.rst:464
 msgid ""
 "`Portuguese: Classificação Supervisionada de Imagens Orbitais com o Semi-"
 "Automatic Classification Plugin <http://qgisbrasil.org/blog/wp-"
@@ -1207,7 +1208,7 @@ msgstr ""
 "Automatic Classification Plugin <http://qgisbrasil.org/blog/wp-"
 "content/uploads/2015/08/tutorial_scp_01.pdf>`_;"
 
-#: ../../faq.rst:460
+#: ../../faq.rst:465
 msgid ""
 "`Portuguese: Tutorial Classificação e caracterização de imagens de satélites"
 " <https://www.youtube.com/watch?v=Wab1UVmVl0k>`_;"
@@ -1215,7 +1216,7 @@ msgstr ""
 "`Portugués: Tutorial Classificação e caracterização de imagens de satélites "
 "<https://www.youtube.com/watch?v=Wab1UVmVl0k>`_;"
 
-#: ../../faq.rst:461
+#: ../../faq.rst:466
 msgid ""
 "`Portuguese: Aprendizagem Supervisionada usando o SCP no QGIS "
 "<https://www.youtube.com/watch?v=FDYQrDb4qYY>`_;"
@@ -1223,7 +1224,7 @@ msgstr ""
 "`Portugués: Aprendizagem Supervisionada usando o SCP no QGIS "
 "<https://www.youtube.com/watch?v=FDYQrDb4qYY>`_;"
 
-#: ../../faq.rst:462
+#: ../../faq.rst:467
 msgid ""
 "`Portuguese: Classificação supervisionada utilizando o QGIS e SCP "
 "<https://www.youtube.com/watch?v=TOMfdalS_U4>`_;"
@@ -1231,7 +1232,7 @@ msgstr ""
 "`Portugués: Classificação supervisionada utilizando o QGIS e SCP "
 "<https://www.youtube.com/watch?v=TOMfdalS_U4>`_;"
 
-#: ../../faq.rst:463
+#: ../../faq.rst:468
 msgid ""
 "`Russian: Опыт классификации космоснимка Landsat с помощью Semi-Automatic "
 "Classification Plugin в QGIS <http://gis-"
@@ -1241,7 +1242,7 @@ msgstr ""
 "Classification Plugin в QGIS <http://gis-"
 "lab.info/qa/landsat_qgis_scp.html>`_;"
 
-#: ../../faq.rst:464
+#: ../../faq.rst:469
 msgid ""
 "`Spanish: Ejercicio Clasificación Semiautomática Plugin (SCP) "
 "<https://sernanpqgis.wordpress.com/2015/09/25/ejercicio-clasificacion-"
@@ -1251,7 +1252,7 @@ msgstr ""
 "<https://sernanpqgis.wordpress.com/2015/09/25/ejercicio-clasificacion-"
 "semiautomatica-plugin-scp/>`_;"
 
-#: ../../faq.rst:465
+#: ../../faq.rst:470
 msgid ""
 "`Spanish: Aplicaciones de Teledetección con el QGIS y el plugin Semi-"
 "Automatic Classification <http://carbajallosa.blogspot.it/2015/04"
@@ -1261,7 +1262,7 @@ msgstr ""
 "Automatic Classification <http://carbajallosa.blogspot.it/2015/04"
 "/aplicaciones-de-teledeteccion-con-el.html>`_;"
 
-#: ../../faq.rst:466
+#: ../../faq.rst:471
 msgid ""
 "`Spanish: Descarga de Landsat 8, 7, 5 y 4 Semi Automatic Classification "
 "Plugin Qgis 2.8 "
@@ -1273,7 +1274,7 @@ msgstr ""
 "<http://sistemasdeinformaciongeografica911.blogspot.mx/2015/04/descarga-de-"
 "landsat-5-7-y-8-qgis-semi.html>`_;"
 
-#: ../../faq.rst:467
+#: ../../faq.rst:472
 msgid ""
 "`Swedish: Landsat 8 och fjärranalys med QGIS "
 "<https://geosupportsystem.wordpress.com/2015/04/02/landsat-8-och-"
@@ -1283,19 +1284,11 @@ msgstr ""
 "<https://geosupportsystem.wordpress.com/2015/04/02/landsat-8-och-"
 "fjarranalys-med-qgis/>`_;"
 
-#: ../../faq.rst:468
-msgid ""
-"`Ukrainian: Посібник користувача модуля Напівавтоматичної класифікації "
-"<http://semiautomaticclassificationmanual.readthedocs.org/uk_UA/latest/>`_;"
-msgstr ""
-"`Ucraniano: Посібник користувача модуля Напівавтоматичної класифікації "
-"<http://semiautomaticclassificationmanual.readthedocs.org/uk_UA/latest/>`_;"
-
-#: ../../faq.rst:474
+#: ../../faq.rst:480
 msgid "How can I translate this user manual to another language?"
 msgstr "¿Cómo puedo traducir este manual del usuario a otro lenguaje?"
 
-#: ../../faq.rst:476
+#: ../../faq.rst:482
 msgid ""
 "It is possible to easily translate the user manual to any language, because "
 "it is written in reStructuredText as markup language (using Sphinx). "
@@ -1309,20 +1302,20 @@ msgstr ""
 "manual a tu lenguaje. Las siguientes guías ilustran los pasos principales "
 "para la traducción. La cual puede efectuarse:"
 
-#: ../../faq.rst:480
+#: ../../faq.rst:486
 msgid "using the free online service Transifex;"
 msgstr "usando el servicio en línea gratuito Transifex;"
 
-#: ../../faq.rst:481
+#: ../../faq.rst:487
 msgid "using the gettext .po files."
 msgstr "usando los archivos gettext.po."
 
-#: ../../faq.rst:485
+#: ../../faq.rst:491
 msgid "**Method 1. Translation using the free online service Transifex**"
 msgstr ""
 "**Método 1. Traducción usando el servicio en línea gratuito Transifex**"
 
-#: ../../faq.rst:487
+#: ../../faq.rst:493
 msgid ""
 "This is probably the easiest way to translate the manual using an online "
 "service."
@@ -1330,19 +1323,19 @@ msgstr ""
 "Esta probablemente es la forma más fácil de traducir el manual usando un "
 "servicio en línea."
 
-#: ../../faq.rst:489
+#: ../../faq.rst:495
 msgid "Join the Semi-automatic Classification Manual project"
 msgstr "únete al proyecto del Manual de Semi-automatic Classification"
 
-#: ../../faq.rst:499
+#: ../../faq.rst:505
 msgid "Translation"
 msgstr "Traducción"
 
-#: ../../faq.rst:504
+#: ../../faq.rst:510
 msgid "**Method 2. Translation using the gettext .po files**"
 msgstr "**Método 2. Traducir usando los archivos gettext.po**"
 
-#: ../../faq.rst:506
+#: ../../faq.rst:512
 msgid ""
 "In order to use this method, you should be familiar with GitHub. This "
 "translation method allows for the translation of the PO files locally."
@@ -1350,11 +1343,11 @@ msgstr ""
 "Para elegir usar este método, deberías estar familiarizado con GitHub. Este "
 "método de traducción permite la traducción de los archivos PO en modo local."
 
-#: ../../faq.rst:508
+#: ../../faq.rst:514
 msgid "Download the translation files"
 msgstr "Descargar los archivos de traducción"
 
-#: ../../faq.rst:510
+#: ../../faq.rst:516
 msgid ""
 "Go to the GitHub project "
 "https://github.com/semiautomaticgit/SemiAutomaticClassificationManual_v4/tree/master/locale"
@@ -1368,11 +1361,11 @@ msgstr ""
 "no está listado), o puedes bifurcar el repositorio. Cada archivo .po es un "
 "archivo de texto que se refiere a una sección del Manual del Usuario."
 
-#: ../../faq.rst:513
+#: ../../faq.rst:519
 msgid "Edit the translation files"
 msgstr "Edita los archivos de traducción"
 
-#: ../../faq.rst:515
+#: ../../faq.rst:521
 msgid ""
 "Now you can edit the .po files. It is convenient to edit those file using "
 "one of the following programs: for instance `Poedit "
@@ -1389,11 +1382,11 @@ msgstr ""
 "<http://www.omegat.org/en/download_selector/ui.php>`_ (basado en Java) para "
 "Windows, Linux y Mac OS X."
 
-#: ../../faq.rst:521
+#: ../../faq.rst:527
 msgid "Where is the source code of SCP?"
 msgstr "¿Dónde está el código fuente de SCP?"
 
-#: ../../faq.rst:523
+#: ../../faq.rst:529
 msgid ""
 "You can find the source code of SPC is at the following link "
 "https://github.com/semiautomaticgit/SemiAutomaticClassificationPlugin"
@@ -1411,10 +1404,20 @@ msgid ""
 "Landsat thermal infrared band is excluded from classifications because "
 "values are mainly related to object temperature."
 msgstr ""
+"En general, es preferible evitar las bandas del infrarojo térmico. Si está "
+"usando Landsat 4, 5 o 7 debería seleccionar las bandas: 1, 2, 3, 4, 5, 7 "
+"evitando usar la banda 6 que es la del infrarojo térmico; para Landsat 8 "
+"debería elegir las bandas: 2, 3, 4, 5, 6, 7. Generalmente se evita utilizar "
+"la banda 1 de Landsat 8 debido a que ésta es muy similar a la banda azul, y "
+"es principalmente utilizada para el estudio de aerosoles costeros. Las "
+"bandas termales de Landsat también se excluyen de las clasificaciones debido"
+" a que sus valores están principalmente relacionados a la temperatura de los"
+" objetos."
 
 #: ../../faq.rst:375
 msgid "Error installing the plugin, possible missing dependencies. Why?"
 msgstr ""
+"Error al instalar el plugin, posiblemente faltan dependencias. ¿Por qué?"
 
 #: ../../faq.rst:377
 msgid ""
@@ -1425,49 +1428,133 @@ msgid ""
 "order to avoid this error, python dependencies should not be installed "
 "through Anaconda."
 msgstr ""
+"El plugin requiere la instalación de librerías GDAL, NumPy, SciPy y "
+"Matplotlib, las cuales deberían haber sido parte del instalador de QGIS. Si "
+"la instalación del plugin falla, y obtiene un mensaje acerca de posibles "
+"dependencias faltantes, usted debería intentar instalar o actualizar QGIS y "
+"las dependencias requeridas. Nótese que para evitar este error, las "
+"dependencias Python no deberían ser instaladas a través de Anaconda."
 
 #: ../../faq.rst:420
 msgid "See the :ref:`tutorials` for more information and examples."
-msgstr ""
+msgstr "Ver los :ref:`tutorials` para más información y ejemplos."
 
 #: ../../faq.rst:429
 msgid ""
 "Also, you can donate to this project at the following link "
 "https://fromgistors.blogspot.com/p/donations.html ."
 msgstr ""
+"Además. usted puede donar a este proyecto en el siguiente enlace: "
+"https://fromgistors.blogspot.com/p/donations.html ."
 
-#: ../../faq.rst:483
+#: ../../faq.rst:489
 msgid ""
 "Before translating, please `read this document "
 "<http://docs.qgis.org/testing/en/docs/documentation_guidelines/do_translations.html#translate-a-manual>`_"
 " from the QGIS translation guide, which helps you understand the "
 "reStructuredText."
 msgstr ""
+"Antes de traducir, por favor lee este documento  "
+"<http://docs.qgis.org/testing/en/docs/documentation_guidelines/do_translations.html#translate-a-manual>`_"
+" de la guía de traducción de QGIS, la cual te ayudará a comprender "
+"reStructuredText."
 
-#: ../../faq.rst:491
+#: ../../faq.rst:497
 msgid ""
 "Go to the page https://www.transifex.com/semi-automatic-classification/semi-"
 "automatic-classification-plugin-manual and click the button ``Help "
 "translate``. You can sign in using your Google or Facebook account, or with "
 "a free registration."
 msgstr ""
+"Ve a la página https://www.transifex.com/semi-automatic-classification/semi-"
+"automatic-classification-plugin-manual . Haz clic en el botón  ``Help "
+"translate``. Puedes suscribirte usando tus cuentas de Google o Facebook, o "
+"registrando una nueva cuenta gratuita."
 
-#: ../../faq.rst:494
+#: ../../faq.rst:500
 msgid "Select your language"
-msgstr ""
+msgstr "Selecciona tu idioma"
 
-#: ../../faq.rst:496
+#: ../../faq.rst:502
 msgid ""
 "Select your language and click the button ``Join team``. If your language is"
 " not listed, click the button ``Request language``."
 msgstr ""
+"Selecciona tu idioma y haz clic en el botón ``Join team``. Si tu idioma no "
+"está en el listado, clic en el botón ``Request language``."
 
-#: ../../faq.rst:501
+#: ../../faq.rst:507
 msgid ""
 "There are several files to be translated, which refer to the sections of the"
 " SCP documentation. To translate the SCP interface you should select the "
 "file ``semiautomaticclassificationplugin.ts`` ."
 msgstr ""
+"Existen varios archivos para traducir, los cuales se refieren a las "
+"secciones de la documentación de SCP. Para traducir la interfaz de SCP, "
+"debes seleccionar el archivo ``semiautomaticclassificationplugin.ts`` ."
+
+#: ../../faq.rst:459
+msgid ""
+"`Portuguese: Classificacao supervisionada de imagens Sentinel-2 com QGIS e "
+"SCP <https://www.youtube.com/watch?v=t5D6JT7adYY>`_;"
+msgstr ""
+"`Portugués: Classificacao supervisionada de imagens Sentinel-2 com QGIS e "
+"SCP <https://www.youtube.com/watch?v=t5D6JT7adYY>`_;"
+
+#: ../../faq.rst:460
+msgid ""
+"`Portuguese: Avaliação do erro de uma imagem de satélite usando o QGIS e o "
+"SCP <https://www.youtube.com/watch?v=k1yjcJPb1WI>`_;"
+msgstr ""
+"`Portugués: Avaliação do erro de uma imagem de satélite usando o QGIS e o "
+"SCP <https://www.youtube.com/watch?v=k1yjcJPb1WI>`_;"
+
+#: ../../faq.rst:461
+msgid ""
+"`Portuguese: Conversão Sentinel-2 para refletância com QGIS SCP "
+"<https://www.youtube.com/watch?v=m3XFvvVrU24>`_;"
+msgstr ""
+"`Portugués: Conversão Sentinel-2 para refletância com QGIS SCP "
+"<https://www.youtube.com/watch?v=m3XFvvVrU24>`_;"
+
+#: ../../faq.rst:462
+msgid ""
+"`Portuguese: Criar composições coloridas no QGIS com SCP "
+"<https://www.youtube.com/watch?v=LWvDEE1Evxg>`_;"
+msgstr ""
+"`Portugués: Criar composições coloridas no QGIS com SCP "
+"<https://www.youtube.com/watch?v=LWvDEE1Evxg>`_;"
+
+#: ../../faq.rst:463
+msgid ""
+"`Portuguese: Corte de imagem Sentinel-2 usand QGIS e SCP "
+"<https://www.youtube.com/watch?v=8UHey-bQJGs>`_;"
+msgstr ""
+"`Portugués: Corte de imagem Sentinel-2 usand QGIS e SCP "
+"<https://www.youtube.com/watch?v=8UHey-bQJGs>`_;"
+
+#: ../../faq.rst:473
+msgid ""
+"`Ukrainian: Основи дешифрування плагіном Semi-Automatic Classification 5.0 "
+"<https://www.youtube.com/watch?v=kwI4RhYr8Rc>`_;"
+msgstr ""
+"`Ukrainian: Основи дешифрування плагіном Semi-Automatic Classification 5.0 "
+"<https://www.youtube.com/watch?v=kwI4RhYr8Rc>`_;"
+
+#: ../../faq.rst:474
+msgid ""
+"`Ukrainian: Посібник користувача модуля Напівавтоматичної класифікації "
+"<http://semiautomaticclassificationmanual-v3.readthedocs.io/uk_UA/latest/>`_;"
+msgstr ""
+"`Ukrainian: Посібник користувача модуля Напівавтоматичної класифікації "
+"<http://semiautomaticclassificationmanual-v3.readthedocs.io/uk_UA/latest/>`_;"
+
+#~ msgid ""
+#~ "`Ukrainian: Посібник користувача модуля Напівавтоматичної класифікації "
+#~ "<http://semiautomaticclassificationmanual.readthedocs.org/uk_UA/latest/>`_;"
+#~ msgstr ""
+#~ "`Ucraniano: Посібник користувача модуля Напівавтоматичної класифікації "
+#~ "<http://semiautomaticclassificationmanual.readthedocs.org/uk_UA/latest/>`_;"
 
 #~ msgid "See the ref:`tutorials` for more information and examples."
 #~ msgstr "Mira el ref:`tutorials` para más información y ejemplos."
