--- a/locale/es/LC_MESSAGES/scp_dock.po
+++ b/locale/es/LC_MESSAGES/scp_dock.po
@@ -1,12 +1,13 @@
 # Translators:
 # Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016
+# Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Semi-Automatic Classification Plugin 5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-18 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016\n"
+"Last-Translator: Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/semi-automatic-classification/teams/53374/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,12 +25,17 @@ msgid ""
 "of ROIs (Regions Of Interest) and spectral signatures, and the "
 "classification of an input image."
 msgstr ""
+"El :guilabel:`Panel SCP` permita la definición de las entradas, la creación "
+"de ROIs (Regiones de Interés) y firmas espectrales, y la clasificación de "
+"una imagen de entrada."
 
 #: ../../scp_dock.rst:149
 msgid ""
 "The :ref:`input_image`, to be classified, can be a multi-band raster or a "
 "set of single bands defined in the :ref:`band_set_tab`."
 msgstr ""
+"La :ref:`input_image`, a ser clasificada, puede ser un ráster multibanda o "
+"un conjunto de bandas individuales definido en :ref:`band_set_tab`."
 
 #: ../../scp_dock.rst:151
 msgid ""
@@ -37,6 +43,9 @@ msgid ""
 "polygons and spectral signatures used for the land cover classification of "
 "the :ref:`input_image`."
 msgstr ""
+"El :ref:`training_input`, creado con :guilabel:`SCP`, guarda los polígonos "
+"ROI y las firmas espectrales utilizadas para la clasificación de cobertura "
+"del suelo de la :ref:`input_image`."
 
 #: ../../scp_dock.rst:153
 msgid ""
@@ -49,6 +58,15 @@ msgid ""
 "spectral signatures of the ROI. It is worth pointing out that classification"
 " is always based on spectral signatures."
 msgstr ""
+"Las ROIs son polígonos utilizados para la definición de firmas espectrales "
+"características de las clases de cobertura del suelo. :guilabel:`SCP` "
+"permite la creación de :guilabel:`polígonos ROI temporales` utilizando un "
+"algoritmo de región incremental o dibujándolos manualmente. Al utilizar el "
+"algoritmo de región incrementa, la imagen es segmentada alrededor de un "
+"píxel semilla incluyendo los píxeles espectralmente homogéneos. "
+":guilabel:`Polígonos ROI temporales`pueden ser grabados en el "
+"ref:`training_input` junto con las firmas espectrales del ROI. Es importante"
+" notar que la clasificación está siempre basada en las firmas espectrales."
 
 #: ../../scp_dock.rst:159
 msgid ""
@@ -61,6 +79,15 @@ msgid ""
 "class name), but only :guilabel:`Macroclass ID` and :guilabel:`Class ID` are"
 " used for the classification process."
 msgstr ""
+"En :guilabel:`SCP`las clases de cobertura del suelo (y ROIs) están definidas"
+" con un sistema de  :guilabel:`Clases` (:guilabel:`Clase ID`) y "
+":guilabel:`Macroclases` (:guilabel:`Macroclase ID`) (ver "
+":ref:`classes_definition`) que son utilizadas para el proceso de "
+"clasificación. Cada :guilabel:`Macroclase ID` está relacionada a una "
+":guilabel:`Información de Macroclase` (ej. nombre de macroclase), y cada "
+":guilabel:`Clase ID` está relacionada a una :guilabel:`Información de Clase`"
+" (ej. nombre de clase), pero sólo el :guilabel:`Macroclase ID` y el "
+":guilabel:`Clase ID` son utilizados en el proceso de clasificación."
 
 #: ../../scp_dock.rst:161
 msgid ""
@@ -68,10 +95,14 @@ msgid ""
 "spectral signature part which are independent. The attribute table of the "
 "vector contains four fields as in the following table."
 msgstr ""
+"La Entrada de Entrenamiento está compuesta por una parte vectorial (i.e. un "
+"archivo shape) y una parte de firma espectral, las cuales son "
+"independientes. La tabla de atributos del vector contiene cuatro capos, como"
+" se muestra en la siguiente tabla."
 
 #: ../../scp_dock.rst:164
 msgid ":guilabel:`Training input fields`"
-msgstr ""
+msgstr ":guilabel:`Atributos de la Entrada de Entrenamiento`"
 
 #: ../../scp_dock.rst:167
 msgid "Description"
@@ -131,6 +162,9 @@ msgid ""
 " :ref:`training_input`. In addition, spectral signatures can be imported "
 "from other sources (see :ref:`import_signatures_tab`)."
 msgstr ""
+"Las firmas espectrales de las clases son calculadas a partir de los ROIs y "
+"grabadas en la :ref:`training_input`. Adicionalmente, las firmas espectrales"
+" pueden ser importadas de otras fuentes (ver :ref:`import_signatures_tab`)."
 
 #: ../../scp_dock.rst:181
 msgid ""
@@ -141,6 +175,13 @@ msgid ""
 "separately and each pixel is classified with the corresponding :guilabel:`MC"
 " ID` (i.e. there is no combination of signatures before the classification)."
 msgstr ""
+"El uso de :guilabel:`Macroclase ID` o :guilabel:`Clase ID` para la "
+"clasificación es definida con la opción :guilabel:`Usar MC ID o C ID` in "
+":ref:`classification_alg`. Es importante notar que cuando se usa "
+":guilabel:`Macroclase ID` todas las firmas espectrales son evaluadas "
+"separadamente y cada píxel es clasificado con el correspondiente "
+":guilabel:`MC ID` (i.e. no se combinan las firmas antes de la "
+"clasificación)."
 
 #: ../../scp_dock.rst:184
 msgid ""
@@ -148,6 +189,9 @@ msgid ""
 ":ref:`classification_output` ) or a part of it, creating a "
 ":ref:`classification_preview`."
 msgstr ""
+"La **clasificación** puede ser ejecutada para toda la imagen  ( "
+":ref:`classification_output` ) opara una parte de ella, creando una "
+":ref:`classification_preview`."
 
 #: ../../scp_dock.rst:186
 msgid ""
@@ -195,21 +239,23 @@ msgstr "|input_table| = Tabla"
 
 #: ../../scp_dock.rst:209
 msgid "SCP input"
-msgstr "SCP introducir"
+msgstr "SCP entrada de datos"
 
 #: ../../scp_dock.rst:214
 msgid ":guilabel:`SCP input`"
-msgstr ""
+msgstr ":guilabel:`Entrada SCP`"
 
 #: ../../scp_dock.rst:219
 msgid "Input image"
-msgstr ""
+msgstr "Imagen de entrada"
 
 #: ../../scp_dock.rst:221
 msgid ""
 "This section allows for the selection of the image to be classified. Raster "
 "files must be already loaded in QGIS."
 msgstr ""
+"Esta sección permite la selección de la imagen a ser clasificada. Los "
+"rásters deben estar ya cargados en QGIS."
 
 #: ../../scp_dock.rst:224
 msgid ""
@@ -217,15 +263,21 @@ msgid ""
 "the :ref:`band_set_tab`. If a multi-band raster is selected, raster bands "
 "are listed in the :ref:`band_set_tab`."
 msgstr ""
+"La :ref:`input_image`, a ser clasificada, puede ser un ráster multi-banda o "
+"un conjunto de bandas individuales definido en :ref:`band_set_tab`. Si se "
+"selecciona un ráster multi-banda, las bandas ráster son listadas en "
+":ref:`band_set_tab`."
 
 #: ../../scp_dock.rst:227
 msgid ""
 "|open_file|: open one or more raster files and add them :ref:`band_set_tab`;"
 msgstr ""
+"|open_file|: abre uno o más archivos ráster y los añade a "
+":ref:`band_set_tab`;"
 
 #: ../../scp_dock.rst:228
 msgid "|bandset_tool|: open the :ref:`band_set_tab`;"
-msgstr ""
+msgstr "|bandset_tool|: abre el :ref:`band_set_tab`;"
 
 #: ../../scp_dock.rst:229
 msgid ""
@@ -234,6 +286,10 @@ msgid ""
 ":ref:`band_set_tab` is defined, then this list will contain the item "
 ":guilabel:`<< band set >>`;"
 msgstr ""
+":guilabel:`Imagen de Entrada` |input_list| |project_save|: selecciona la "
+"imagen de entrada de una lista de imágenes multiespectrales cargadas en "
+"QGIS; si :ref:`band_set_tab` está definido, entonces esta lista contendrá el"
+" item :guilabel:`<< band set >>`;"
 
 #: ../../scp_dock.rst:230
 msgid "|reload|: refresh layer list;"
@@ -241,7 +297,7 @@ msgstr "|reload|: recargar la lista de capas;"
 
 #: ../../scp_dock.rst:235
 msgid "Training input"
-msgstr "Entrenamiento de Entrada"
+msgstr "Entrada de Entrenamiento"
 
 #: ../../scp_dock.rst:237
 msgid ""
@@ -249,6 +305,9 @@ msgid ""
 " file containing a shapefile and an xml file) used for storing ROIs and "
 "spectral signatures."
 msgstr ""
+"La Entrada de Entrenamiento es un archivo ``.scp``creado en guilabel:`SCP`  "
+"(i.e. un archivo zip conteniendo un shapefile y un archivo xml) utilizado "
+"para guardar las ROIs y las firmas espectrales. "
 
 #: ../../scp_dock.rst:239
 msgid ""
@@ -256,6 +315,10 @@ msgid ""
 ":guilabel:`SCP` are not compatible with SPC 5; however you can import a ROI "
 "shapefile using the tool :ref:`import_shapefile_tab`."
 msgstr ""
+"**Atención**: Los archivos de listas de firmas creados con versiones "
+"anteriores de :guilabel:`SCP` no son compatibles con SPC 5; sin embargo, es "
+"posible importar un shapefile de ROIs usando la herramienta "
+":ref:ìmport_shapefile_tab`."
 
 #: ../../scp_dock.rst:241
 msgid ""
@@ -266,6 +329,12 @@ msgid ""
 " order to prevent data loss, you should not edit this layer using QGIS "
 "functions)."
 msgstr ""
+"Las ROIs y firmas espectrales se muestran en la :ref:`ROI_list`. ROIs y "
+"firmas espectrales pueden ser importadas de otras fuentes  (ver "
+":ref:`import_signatures_tab`) y exportadas (ver "
+":ref:`export_signatures_tab`). Las ROIs se musetran en QGIS como un archivo "
+"vectorial (para prevenir pérdida de datos, no se debe editar esta capa "
+"usando las funciones de QGIS)."
 
 #: ../../scp_dock.rst:245
 msgid ""
@@ -273,6 +342,9 @@ msgid ""
 "loaded in :ref:`ROI_list`; the vector part of the training input is loaded "
 "in QGIS;"
 msgstr ""
+"|open_file|: Abrir un archivo de entrada de entrenamiento; Las ROIs  y "
+"firmas espectrales son cargadas en :ref:`ROI_list`; theel archivo vectorial "
+"de la entrada de entrenamiento es cargada en QGIS;"
 
 #: ../../scp_dock.rst:246
 msgid ""
@@ -760,7 +832,7 @@ msgstr ""
 
 #: ../../scp_dock.rst:413
 msgid "Land Cover Signature Classification"
-msgstr ""
+msgstr " Clasificación por Firmas de Cobertura del Suelo"
 
 #: ../../scp_dock.rst:415
 msgid ""
