--- a/locale/es/LC_MESSAGES/tutorials.po
+++ b/locale/es/LC_MESSAGES/tutorials.po
@@ -1,12 +1,13 @@
 # Translators:
 # Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016
+# Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Semi-Automatic Classification Plugin 5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-18 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016\n"
+"Last-Translator: Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/semi-automatic-classification/teams/53374/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +28,7 @@ msgid ""
 "<http://docs.qgis.org/2.14/en/docs/user_manual/introduction/qgis_gui.html>`_)."
 msgstr ""
 "El siguiente es un tutorial bastante básico para la clasificación de la "
-"cobertura terrestre usando Semi-Automatic Classification Plugin "
+"cobertura del suelo usando Semi-Automatic Classification Plugin "
 "(:guilabel:`SCP`). Se supone que tienes conocimientos básicos de QGIS "
 "(puedes encontrar una guía de la interfaz de QGIS `en esta página "
 "<http://docs.qgis.org/2.14/en/docs/user_manual/introduction/qgis_gui.html>`_)."
