--- a/locale/es/LC_MESSAGES/working_toolbar.po
+++ b/locale/es/LC_MESSAGES/working_toolbar.po
@@ -1,12 +1,13 @@
 # Translators:
 # Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016
+# Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Semi-Automatic Classification Plugin 5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-18 22:17+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Igor F. Davalos Rojas <idavalosr@gmail.com>, 2016\n"
+"Last-Translator: Daniel Orellana (Temporalista) <temporalista@gmail.com>, 2016\n"
 "Language-Team: Spanish (https://www.transifex.com/semi-automatic-classification/teams/53374/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -179,9 +180,9 @@ msgid ""
 "Z`` for removing the last multipart polygon;"
 msgstr ""
 "|roi_single|: activa el puntero para crear un :guilabel:`ROI temporal` "
-"usando el algoritmo de crecimiento por región ; clic izquierdo en el mapa "
-"para crear el ROI; clic derecho en el mapa para mostrar la firma espectral "
-"del pixel de la :ref:`input_image` en el :ref:`spectral_signature_plot`; "
+"usando el Algoritmo de Región Incremental ; clic izquierdo en el mapa para "
+"crear el ROI; clic derecho en el mapa para mostrar la firma espectral del "
+"pixel de la :ref:`input_image` en el :ref:`spectral_signature_plot`; "
 "presiona la tecla ``CTRL`` para agregar un polígono multipartes (no se "
 "crearán nuevas partes si se solapan con otras); presiona la tecla ``CTRL + "
 "Z`` para quitar el último polígono multiparte;"
@@ -192,9 +193,9 @@ msgid ""
 "algorithm at the same seed pixel as the previous one; it is useful after "
 "changing the :guilabel:`region growing parameters`;"
 msgstr ""
-"|roi_redo|: crea un :guilabel:`ROI temporal` usando el algoritmo de "
-"crecimiento por región en el mismo pixel de origen del anterior; es útil "
-"después de cambiar los :guilabel:`parámetros de crecimiento por región`;"
+"|roi_redo|: crea un :guilabel:`ROI temporal` usando el Algoritmo de Región "
+"Incremental en el mismo pixel de origen del anterior; es útil después de "
+"cambiar los :guilabel:`parámetros región incremental`;"
 
 #: ../../working_toolbar.rst:133
 msgid ""
@@ -202,9 +203,9 @@ msgid ""
 " for the ROI creation using a region growing algorithm on the "
 ":ref:`input_image`:"
 msgstr ""
-":guilabel:`Parámetros de Crecimiento por Región`: los siguientes parámetros "
-"son requeridos para la creación del ROI usando un algoritmo de crecimiento "
-"por región en la :ref:`input_image`:"
+":guilabel:`Parámetros de Región Incremental`: los siguientes parámetros son "
+"requeridos para la creación del ROI usando un Algoritmo de Región "
+"Incremental en la :ref:`input_image`:"
 
 #: ../../working_toolbar.rst:131
 msgid ""
@@ -280,6 +281,14 @@ msgid ""
 "the corresponding spectral signature (i.e. probably the spectral signature "
 "identifies correctly those pixels)."
 msgstr ""
+"Adicionalmente al raster de clasificación, es posible mostrar un "
+":ref:`algorithm_raster`, el cual es útil para evaluar la distancia de un "
+"pixel clasificado como ``clase X`` a la firma espectral correspondiente `X`."
+" En :guilabel:`Previsualización de la clasificación`, los pixeles negros "
+"distan de la firma espectral correspondiente (probablemente se necesita "
+"recolectar una nueva ROI o firma espectral en esa área). Los pixeles blancos"
+" son cercanos a la firma espectral correspondiente (probablemente la forma "
+"espectral identifica correctamente esos pixeles)."
 
 #: ../../working_toolbar.rst:148
 msgid ""
