--- a/locale/es/LC_MESSAGES/tutorial_1.po
+++ b/locale/es/LC_MESSAGES/tutorial_1.po
@@ -376,10 +376,10 @@ msgid ""
 "area of the map. After a while the orange semi-transparent polygon is "
 "displayed over the image."
 msgstr ""
-"En la ref:`working_toolbar` establece el valor :guilabel:`Dist` a 0.08 . Haz"
-" clic en el botón |roi_single| en la :ref:`working_toolbar` y haz clic sobre"
-" el área azul del mapa. En un momento, el polígono naranja semi-transparente"
-" se mostrará sobre la imagen."
+"En la :ref:`working_toolbar` establece el valor :guilabel:`Dist` a 0.08 . "
+"Haz clic en el botón |roi_single| en la :ref:`working_toolbar` y haz clic "
+"sobre el área azul del mapa. En un momento, el polígono naranja semi-"
+"transparente se mostrará sobre la imagen."
 
 #: ../../tutorial_1.rst:355
 msgid ""
